--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static/files/server.conf
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static/files/server.conf
@@ -1,13 +1,16 @@
 port 1194
 proto udp
 dev tun
+client-config-dir ccd
+route 10.0.1.0 255.255.255.0
+client-to-client
+push "10.1.1.0 255.255.255.0"
 ca /etc/openvpn/ca.crt
 cert /etc/openvpn/server.crt
 key /etc/openvpn/server.key
 dh dh2048.pem
 server 172.1.1.0  255.255.255.0
 ifconfig-pool-persist ipp.txt
-push "route 10.0.1.0 255.255.255.0"
 keepalive 10 120
 tls-auth /etc/openvpn/ta.key 0
 cipher AES-256-CBC
