--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static/tasks/main.yml
@@ -8,6 +8,12 @@
     update_cache=yes
     cache_valid_time=3600
 
+- name: enable IPv4 forwarding
+  shell: sysctl net.ipv4.ip_forward=1
+
+- name: enable IPv6 forwarding
+  shell: sysctl net.ipv6.conf.all.forwarding=1
+
 - name: packages installed
   apt:
     pkg={{ item }}
@@ -82,20 +88,21 @@
 - name: Manage openssh firewall with UFW
   ufw: rule=allow name=OpenSSH
   sudo: yes
+  
 - name: Manage port 1194 firewall with UFW
   ufw: rule=allow port=1194 proto=udp
   sudo: yes
 
-#openvpn/client.ovpn
-- name: client.ovpn configuration
+#openvpn/client.conf
+- name: client.conf configuration
   copy:
-    src=roles/vpn_static/files/client.ovpn
-    dest=/etc/openvpn/client.ovpn
+    src=roles/vpn_static/files/client.conf
+    dest=/etc/openvpn/client.conf
     owner=cloud
     group=cloud
     mode=0644
-    #openvpn/server.conf
 
+#openvpn/server.conf
 - name: server.conf configuration
   copy:
     src=roles/vpn_static/files/server.conf
@@ -103,8 +110,8 @@
     owner=cloud
     group=cloud
     mode=0644
-    #sysctl.conf
 
+#sysctl.conf
 - name: sysctl.conf configuration
   copy:
     src=roles/vpn_static/files/sysctl.conf
@@ -112,8 +119,8 @@
     owner=root
     group=root
     mode=0644
-    #ufw/before.rules
 
+#ufw/before.rules
 - name: before.rules configuration
   copy:
     src=roles/vpn_static/files/before.rules
@@ -121,8 +128,8 @@
     owner=root
     group=root
     mode=0755
-    #easy-rsa/vars
 
+#easy-rsa/vars
 - name: var configuration
   copy:
     src=roles/vpn_static/files/vars
@@ -130,7 +137,21 @@
     owner=cloud
     group=cloud
     mode=0644
-    #ufw
+
+#ccd
+- name: creation repertoire ccd
+  win_file: path=\etc\openvpn\ccd state=directory
+
+#client1
+- name: configuration ccd
+  copy:
+    src=roles/vpn_static/files/client1
+    dest=/etc/openvpn/ccd/client1
+    owner=root
+    group=root
+    mode=0755
+
+#ufw
 - name: before.rules configuration
   copy:
     src=roles/vpn_static/files/ufw
