--- a/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
@@ -112,6 +112,21 @@ resources:
 
 
 
+
+  server1:
+    type: OS::Nova::Server
+    properties:
+      key_name: { get_param: keypair_name }
+      image: { get_param: image }
+      flavor: { get_param: flavor_name }
+      networks:
+        - network: {get_resource: network}
+      security_groups:
+        - { get_resource: security_group }
+
+
+
+
   server:
     type: OS::Nova::Server
     properties:
