--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
@@ -1,7 +1,8 @@
 ---
-vpn_static:
+vpn_static_server:
 COUNTRY:  "{{ lookup('file', '/etc/vpnconf/COUNTRY') }}"
 PROVINCE:  "{{ lookup('file', '/etc/vpnconf/PROVINCE') }}"
 CITY: "{{ lookup('file', '/etc/vpnconf/CITY') }}"
 ORGANISATION: "{{ lookup('file', '/etc/vpnconf/ORGANISATION') }}"
 EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
+ip_server:  "{{ lookup('file', '/home/cloud/ip_client') }}"
