create ssh keypair

--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
@@ -284,7 +284,7 @@
      chdir: /etc/openvpn/
      executable: /bin/bash
   shell: |
-   scp -oIdentityFile=/home/cloud/.ssh/cloud.pub /etc/openvpn/configclient.tar.gz cloud@"{{ip_client}}":/etc/openvpn/
+   scp -oIdentityFile=/home/cloud/.ssh/my_key.pem /etc/openvpn/configclient.tar.gz cloud@"{{ip_client}}":/etc/openvpn/
   sudo: yes
 
   notify: start openvpn
