--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
@@ -5,4 +5,4 @@ PROVINCE:  "{{ lookup('file', '/etc/vpnconf/PROVINCE') }}"
 CITY: "{{ lookup('file', '/etc/vpnconf/CITY') }}"
 ORGANISATION: "{{ lookup('file', '/etc/vpnconf/ORGANISATION') }}"
 EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
-ip_server:  "{{ lookup('file', '/home/cloud/ip_client') }}"
+ip_client:  "{{ lookup('file', '/home/cloud/ip_client') }}"
