--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -33,15 +33,18 @@
     - gadmin-openvpn-server
 
 - name: decompress configclient.tar.gz
+  state: present
   unarchive: src=/etc/openvpn/configclient.tar.gz dest=/etc/openvpn/
-  sudo: yes
+
+
+
 
 - name: modification configclient
   replace:
     dest=/etc/openvpn/configclient/client.conf
     regexp='X.X.X.X'
     replace='"{{ip_server}}"'
-  sudo: yes
+  
 
 - name: fr locale generated
   locale_gen: name=fr_FR.UTF-8 state=present
