--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/files/server.conf
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/files/server.conf
@@ -2,9 +2,9 @@ port 1194
 proto udp
 dev tun
 client-config-dir ccd
-route 10.0.1.0 255.255.255.0
+route X.X.X.X 255.255.255.0
 client-to-client
-push "10.1.1.0 255.255.255.0"
+push X.X.X.X 255.255.255.0"
 ca /etc/openvpn/ca.crt
 cert /etc/openvpn/server.crt
 key /etc/openvpn/server.key
