--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
@@ -284,11 +284,29 @@
     chmod 755 configclient.tar.gz
     chgrp cloud configclient.tar.gz
 
-- name: modification openvpn autostart
+- name: setting openvpn autostart
   replace:
     dest=/etc/default/openvpn
     regexp='#AUTOSTART="all"'
     replace='AUTOSTART="all"'
+
+- name: setting server.conf 1
+  replace:
+    dest=/etc/openvpn/server.conf
+    regexp='route X.X.X.X 255.255.255.0'
+    replace='route "{{server_cidr}}" 255.255.255.0'
+
+- name: setting server.conf 2
+  replace:
+    dest=/etc/openvpn/server.conf
+    regexp='push "X.X.X.X 255.255.255.0"'
+    replace='push ""{{client_cidr}}" 255.255.255.0"'
+
+- name: setting client1
+  replace:
+    dest=/etc/openvpn/ccd/client1
+    regexp='push "X.X.X.X 255.255.255.0"'
+    replace='push ""{{server_cidr}}" 255.255.255.0"'
 
 - name: change ownership and right my_key.pem
   file:
@@ -302,7 +320,7 @@
     chdir: /etc/openvpn/
     executable: /bin/bash
   shell: |
-    scp -oIdentityFile=/home/cloud/.ssh/my_key.pem /etc/openvpn/configclient.tar.gz cloud@"{{ip_client}}":/etc/openvpn/
-  
+    scp -oStricthostkeychecking=no -oIdentityFile=/home/cloud/.ssh/my_key.pem /etc/openvpn/configclient.tar.gz cloud@"{{ip_client}}":/etc/openvpn/
+
 
   notify: start openvpn
