--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/vars/main.yml
@@ -6,5 +6,5 @@ CITY: "{{ lookup('file', '/etc/vpnconf/CITY') }}"
 ORGANISATION: "{{ lookup('file', '/etc/vpnconf/ORGANISATION') }}"
 EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
 ip_client:  "{{ lookup('file', '/home/cloud/ip_client') }}"
-client_cidr: "{{ lookup('file', '/home/cloud/client_cidr') }}"
-server_cidr: "{{ lookup('file', '/home/cloud/server_cidr') }}"
+client_cidr: "{{ lookup('file', '/home/cloud/client_cidr.tmp') }}"
+server_cidr: "{{ lookup('file', '/home/cloud/server_cidr.tmp') }}"
