--- a/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
@@ -1,7 +1,7 @@
 heat_template_version: 2013-05-23
 
 
-description: Virtual Private Network Stack
+description: Virtual Private Network Stack Site to Site
 
 
 parameters:
@@ -66,7 +66,7 @@ parameters:
     description: Glance Image
     default: "Ubuntu 14.04"
 
-  clientpair_name:
+  keypair_name:
     description: Keypair to inject in instance
     label: SSH Keypair
     type: string
@@ -194,7 +194,7 @@ resources:
   serverlanserver:
     type: OS::Nova::Server
     properties:
-      key_name: { get_param: keypair_name }
+      key_name: { get_resource: my_key }
       image: { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
@@ -205,7 +205,7 @@ resources:
   serverlanclient:
     type: OS::Nova::Server
     properties:
-      key_name: { get_param: keypair_name }
+      key_name: { get_resource: my_key }
       image: { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
