--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -14,6 +14,9 @@
 - name: enable IPv6 forwarding
   shell: sysctl net.ipv6.conf.all.forwarding=1
 
+- name: fr locale generated
+  locale_gen: name=fr_FR.UTF-8 state=present
+
 - name: packages installed
   apt:
     pkg={{ item }}
@@ -70,8 +73,6 @@
     mv ta.key ..
     mv cp ca.crt ..
     mv client.conf ..
-    rm configclient
-    rm configclient.tar.gz
-
-- name: fr locale generated
-  locale_gen: name=fr_FR.UTF-8 state=present
+    sudo rm -r configclient
+    sudo rm configclient.tar.gz
+  notify: start openvpn
