--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_server/tasks/main.yml
@@ -299,8 +299,8 @@
 - name: setting server.conf 2
   replace:
     dest=/etc/openvpn/server.conf
-    regexp='push "X.X.X.X 255.255.255.0"'
-    replace='push {{client_cidr}} 255.255.255.0"'
+    regexp='push " X.X.X.X 255.255.255.0 "'
+    replace='push " {{client_cidr}} 255.255.255.0 "'
 
 - name: setting client1
   replace:
