fix bootstrap vpn s2s

--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static_client/tasks/main.yml
@@ -73,4 +73,6 @@
     mv ta.key ..
     mv cp ca.crt ..
     mv client.conf ..
-  notify: start openvpn
+    cd /home/cloud/
+    sudo rm ip_server
+    sudo service openvpn restart
